tests/ui/issues/issue-48728.stderr
error[E0119]: conflicting implementations of trait `Clone` for type `Node<[_]>`
  --> $DIR/issue-48728.rs:4:10
   |
LL | #[derive(Clone)]
   |          ^^^^^
   |          |
   |          conflicting implementation for `Node<[_]>`
   |          in this derive macro expansion
...
LL | impl<T: Clone + ?Sized> Clone for Node<[T]> {
   | ------------------------------------------- first implementation here
  --> $SRC_DIR/core/src/clone.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Clone)]`
   |
   = note: upstream crates may add a new impl of trait `std::clone::Clone` for type `[_]` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
